--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,17 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.grid_margin_left{
+  margin-left:10px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+
+.user_name{
+  font-family:Raleway-Bold !important;
+  font-size:16px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.user_info{
+  font-family:Raleway !important;
+  font-size:14px;
+  font-weight: 300;
+  color:gray
 }
