--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,13 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+@font-face {   
+    font-family: 'Raleway-Bold';    //This is what we are going to call
+    src: url('./assets/Raleway/static/Raleway-Bold.ttf');
+  }
+  @font-face {   
+    font-family: 'Raleway';  //This is what we are going to call  
+    src: url('./assets/Raleway/static/Raleway-Regular.ttf');
+  }
